feat: internationalization of system messages and validation